--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "react-paypal-button": "^4.1.1",
     "react-router-dom": "^6.2.1"
   },
   "devDependencies": {
