--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "husky": "^7.0.4",
     "mini-css-extract-plugin": "^2.4.7",
     "prettier": "^2.5.1",
-    "webpack": "^5.66.0",
+    "webpack": "^2.1.0-beta.27",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.7.3"
   }
